<?xml version="1.0" encoding="UTF-8"?>
<!--
     Copyright (C) 2014-2016 The CyanogenMod Project
     Copyright (C) 2017-2018 The LineageOS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:lineage="http://schemas.android.com/apk/res/lineageos.platform"
    xmlns:settings="http://schemas.android.com/apk/res/org.lineageos.lineageparts"
    android:key="status_bar_settings"
    android:title="@string/status_bar_title">

    <PreferenceCategory
        android:title="@string/quick_settings_tweaks_title">

        <org.lineageos.lineageparts.preferences.CustomSeekBarPreference
            android:key="qs_panel_alpha"
            android:title="@string/qs_panel_alpha_title"
            android:max="255"
            android:min="0"
            settings:units=""
            android:defaultValue="255"
            android:persistent="false"/>    

        <lineageos.preference.LineageSystemSettingListPreference
            android:key="qs_quick_pulldown"
            android:title="@string/status_bar_quick_qs_pulldown_title"
            android:entries="@array/status_bar_quick_qs_pulldown_entries"
            android:entryValues="@array/status_bar_quick_qs_pulldown_values"
            android:defaultValue="0" />

        <lineageos.preference.LineageSystemSettingSwitchPreference
            android:key="qs_quick_pd_oinn"
            android:title="@string/status_bar_quick_qs_pd_oinn_title"
            android:summary="@string/status_bar_quick_qs_pd_oinn_summary"
            android:defaultValue="false"/>

    </PreferenceCategory>
	
    
    <org.lineageos.lineageparts.preferences.CustomSeekBarPreference
            android:key="qs_rows_portrait"
            android:icon="@drawable/ic_qs_tile"
            android:title="@string/qs_rows_portrait_title"
            android:max="7"
            android:min="1"
            settings:units="" />

        <org.lineageos.lineageparts.preferences.CustomSeekBarPreference
            android:key="qs_rows_landscape"
            android:icon="@drawable/ic_qs_tile"
            android:title="@string/qs_rows_landscape_title"
            android:max="3"
            android:min="1"
            settings:units="" />

        <org.lineageos.lineageparts.preferences.CustomSeekBarPreference
            android:key="qs_columns_portrait"
            android:icon="@drawable/ic_qs_tile"
            android:title="@string/qs_columns_portrait_title"
            android:max="10"
            android:min="1"
            settings:units="" />

    <org.lineageos.lineageparts.preferences.CustomSeekBarPreference
            android:key="qs_columns_landscape"
            android:icon="@drawable/ic_qs_tile"
            android:title="@string/qs_columns_landscape_title"
            android:max="10"
            android:min="1"
	        settings:units="" />

    <PreferenceScreen
        android:fragment="org.lineageos.lineageparts.statusbar.NetworkTrafficSettings"
        android:key="network_traffic_settings"
        android:title="@string/network_traffic_settings_title"
        android:summary="@string/network_traffic_settings_summary" />


    <PreferenceCategory
        android:title="@string/status_bar_icons_title">

<!--
        <lineageos.preference.LineageSystemSettingSwitchPreference
            android:key="status_bar_notif_count"
            android:title="@string/status_bar_notif_count_title"
            android:summary="@string/status_bar_notif_count_summary"
            android:defaultValue="true" />
-->
        <org.lineageos.lineageparts.preferences.SystemSettingSwitchPreference
            android:key="show_fourg_icon"
            android:title="@string/show_fourg_icon_title"
            android:summary="@string/show_fourg_icon_summary"
            android:defaultValue="false"/>
         
        <org.lineageos.lineageparts.preferences.SystemSettingSwitchPreference
            android:key="data_disabled_icon"
            android:title="@string/data_disabled_icon_title"
            android:summary="@string/data_disabled_icon_summary"
            android:defaultValue="true"/>

        <PreferenceScreen
            android:key="status_bar_icons"
            android:title="@string/status_bar_system_icons_title"
            android:summary="@string/status_bar_system_icons_summary">
            <intent android:action="com.android.settings.action.STATUS_BAR_TUNER" />
        </PreferenceScreen>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="status_bar_clock_key"
        android:title="@string/status_bar_clock_title">

        <lineageos.preference.LineageSystemSettingListPreference
            android:key="status_bar_clock"
            android:title="@string/status_bar_clock_position_title"
            android:summary="%s"
            android:dialogTitle="@string/status_bar_clock_position_title"
            android:entries="@array/status_bar_clock_position_entries"
            android:entryValues="@array/status_bar_clock_position_values"
            android:defaultValue="0" />

        <lineageos.preference.SecureSettingSwitchPreference
            android:key="clock_seconds"
            android:title="@string/status_bar_clock_show_seconds_title"
            android:summary="@string/status_bar_clock_show_seconds_summary"
            android:defaultValue="false" />

        <lineageos.preference.LineageSystemSettingListPreference
            android:key="status_bar_am_pm"
            android:title="@string/status_bar_am_pm_title"
            android:summary="%s"
            android:dialogTitle="@string/status_bar_am_pm_title"
            android:entries="@array/status_bar_am_pm_entries"
            android:entryValues="@array/status_bar_am_pm_values"
            android:defaultValue="2" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="status_bar_battery_key"
        android:title="@string/status_bar_battery_title">

        <lineageos.preference.LineageSystemSettingListPreference
            android:key="status_bar_battery_style"
            android:title="@string/status_bar_battery_style_title"
            android:summary="%s"
            android:dialogTitle="@string/status_bar_battery_style_title"
            android:entries="@array/status_bar_battery_style_entries"
            android:entryValues="@array/status_bar_battery_style_values"
            android:defaultValue="3" />

        <lineageos.preference.LineageSystemSettingListPreference
            android:key="status_bar_show_battery_percent"
            android:title="@string/status_bar_battery_percentage_title"
            android:summary="%s"
            android:dialogTitle="@string/status_bar_battery_percentage_title"
            android:entries="@array/status_bar_battery_percentage_entries"
            android:entryValues="@array/status_bar_battery_percentage_values"
            android:defaultValue="0" />

        <lineageos.preference.LineageSystemSettingSwitchPreference
            android:key="status_bar_show_battery_pct_sign"
            android:title="@string/status_bar_battery_pct_sign_title"
            android:summary="@string/status_bar_battery_pct_sign_summary"
            android:defaultValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/status_bar_brightness_category">

        <lineageos.preference.LineageSecureSettingSwitchPreference
            android:key="qs_show_brightness_slider"
            android:title="@string/status_bar_brightness_slider_title"
            android:summary="@string/status_bar_brightness_slider_summary"
            android:defaultValue="true" />

        <lineageos.preference.LineageSecureSettingSwitchPreference
            android:key="qs_show_auto_brightness"
            android:title="@string/status_bar_brightness_slider_auto_title"
            android:summary="@string/status_bar_brightness_slider_auto_summary"
            android:dependency="qs_show_brightness_slider"
            lineage:requiresConfig="@*android:bool/config_automatic_brightness_available"
            android:defaultValue="true" />

        <lineageos.preference.LineageSystemSettingSwitchPreference
            android:key="status_bar_brightness_control"
            android:title="@string/status_bar_toggle_brightness"
            android:summary="@string/status_bar_toggle_brightness_summary"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/lockscreen_and_qs">

        <org.lineageos.lineageparts.preferences.SystemSettingSwitchPreference
        	android:key="lockscreen_qs_disabled"
        	android:title="@string/lockscreen_qs_disabled_title"
        	android:summary="@string/lockscreen_qs_disabled_summary"
        	android:defaultValue="false" />
        	
    </PreferenceCategory>


</PreferenceScreen>
